--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-1.0.0rc1.tar.bz2
 /bind-dyndb-ldap-1.1.0a1.tar.bz2
 /bind-dyndb-ldap-1.1.0a2.tar.bz2
+/bind-dyndb-ldap-1.1.0b1.tar.bz2
