--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-1.1.0b1.tar.bz2
 /bind-dyndb-ldap-1.1.0b2.tar.bz2
 /bind-dyndb-ldap-1.1.0rc1.tar.bz2
+/bind-dyndb-ldap-2.0-20120921git7710d89.tar.bz2
