--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-1.1.0rc1.tar.bz2
 /bind-dyndb-ldap-2.0-20120921git7710d89.tar.bz2
 /bind-dyndb-ldap-2.0-20121009git6a86b1.tar.gz
+/bind-dyndb-ldap-2.1.tar.bz2
