--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-2.0-20121009git6a86b1.tar.gz
 /bind-dyndb-ldap-2.1.tar.bz2
 /bind-dyndb-ldap-2.3.tar.bz2
+/bind-dyndb-ldap-2.4.tar.bz2
