--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-2.1.tar.bz2
 /bind-dyndb-ldap-2.3.tar.bz2
 /bind-dyndb-ldap-2.4.tar.bz2
+/bind-dyndb-ldap-2.5.tar.bz2
