--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-2.4.tar.bz2
 /bind-dyndb-ldap-2.5.tar.bz2
 /bind-dyndb-ldap-2.6.tar.bz2
+/bind-dyndb-ldap-3.0.tar.bz2
