--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-2.6.tar.bz2
 /bind-dyndb-ldap-3.0.tar.bz2
 /bind-dyndb-ldap-3.1.tar.bz2
+/bind-dyndb-ldap-3.2.tar.bz2
