--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-3.1.tar.bz2
 /bind-dyndb-ldap-3.2.tar.bz2
 /bind-dyndb-ldap-3.3.tar.bz2
+/bind-dyndb-ldap-3.4.tar.bz2
