--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-3.2.tar.bz2
 /bind-dyndb-ldap-3.3.tar.bz2
 /bind-dyndb-ldap-3.4.tar.bz2
+/bind-dyndb-ldap-3.5.tar.bz2
