--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-3.3.tar.bz2
 /bind-dyndb-ldap-3.4.tar.bz2
 /bind-dyndb-ldap-3.5.tar.bz2
+/bind-dyndb-ldap-4.1.tar.bz2
