--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-3.5.tar.bz2
 /bind-dyndb-ldap-4.1.tar.bz2
 /bind-dyndb-ldap-4.3.tar.bz2
+/bind-dyndb-ldap-5.0.tar.bz2
