--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-5.0.tar.bz2
 /bind-dyndb-ldap-5.1.tar.bz2
 /bind-dyndb-ldap-5.2.tar.bz2
+/bind-dyndb-ldap-5.3.tar.bz2
