Really upload 6.1 sources.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-5.2.tar.bz2
 /bind-dyndb-ldap-5.3.tar.bz2
 /bind-dyndb-ldap-6.0.tar.bz2
+/bind-dyndb-ldap-6.1.tar.bz2
+/bind-dyndb-ldap-6.1.tar.bz2.asc
