--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-6.0.tar.bz2
 /bind-dyndb-ldap-6.1.tar.bz2
 /bind-dyndb-ldap-6.1.tar.bz2.asc
+/bind-dyndb-ldap-7.0.tar.bz2
+/bind-dyndb-ldap-7.0.tar.bz2.asc
