--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-6.1.tar.bz2.asc
 /bind-dyndb-ldap-7.0.tar.bz2
 /bind-dyndb-ldap-7.0.tar.bz2.asc
+/bind-dyndb-ldap-8.0.tar.bz2
+/bind-dyndb-ldap-8.0.tar.bz2.asc
