--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-8.0.tar.bz2.asc
 /bind-dyndb-ldap-9.0.tar.bz2
 /bind-dyndb-ldap-9.0.tar.bz2.asc
+/bind-dyndb-ldap-10.0.tar.bz2
+/bind-dyndb-ldap-10.0.tar.bz2.asc
