--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ bind-dyndb-ldap-0.1.0b.tar.bz2
 /bind-dyndb-ldap-9.0.tar.bz2.asc
 /bind-dyndb-ldap-10.0.tar.bz2
 /bind-dyndb-ldap-10.0.tar.bz2.asc
+/bind-dyndb-ldap-10.1.tar.bz2
+/bind-dyndb-ldap-10.1.tar.bz2.asc
