--- a/.packit.yaml
+++ b/.packit.yaml
@@ -13,6 +13,6 @@ upstream_package_name: bind-dyndb-ldap
 # downstream (Fedora) RPM package name
 downstream_package_name: bind-dyndb-ldap
 
-upstream_ref: bind-9.16-sg-start
+# upstream_ref: bind-9.16-sg-start
 
 upstream_project_url: https://pagure.io/bind-dyndb-ldap/
